--- a/src/style/base.less
+++ b/src/style/base.less
@@ -33,7 +33,7 @@ figcaption {
   list-style: none;
   font-style: normal;
   text-decoration: none;
-  text-align: center;
+  text-align: left;
   border: none;
   color: #000;
   font-weight: normal;
